# av_demo

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg-filter.cpp  ffmpeg-util.cpp  util.cpp
app/src/main/cpp/include/: util.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/liaoww/media/: AspectRatio.java  AutoFitTextureView.java  CameraUtil.java  CustomMediaRecorder.java  FFmpeg.java  FileUtil.java  FlashMode.java  FragmentAdapter.java  IFragment.java  MainActivity.java  MediaFragment.java  Orientations.java  PicFragment.java  RecorderFragment.java  TakePicFragment.java  ThreadPoolUtil.java
app/src/main/java/com/liaoww/media/jni/: FFmpeg.java  MediaInfo.java
app/src/main/java/com/liaoww/media/view/: IFragment.java  LoadingFragment.java  MApplication.java  MainActivity.java  MediaFragment.java  PicFragment.java  RecorderFragment.java  TakePicFragment.java
app/src/main/java/com/liaoww/media/view/main/: MainActivity.java  MainViewModel.java
app/src/main/java/com/liaoww/media/view/photo/: PhotoActivity.java  PhotoAlbumAdapter.java  PhotoAlbumFragment.java  PhotoItemDecoration.java  PhotoViewModel.java
app/src/main/java/com/liaoww/media/view/widget/: AutoFitTextureView.java  CropImageView.java  FocusView.java  TimerView.java
app/src/main/res/layout/: activity_main.xml  fragment_loading.xml  fragment_photo_album.xml  fragment_pic.xml  fragment_record.xml  fragment_take_pic.xml  v_photo_album_item.xml
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
